# SPL

./: .travis.yml  CMakeLists.txt  INSTALL  README
doc/: Doxyfile  Doxyfile.in
doc/src/: getting_started.dox  mainpage.dox.in
src/demo/: CMakeLists.txt  wireframe.cpp
src/include/SPL/: Array1.hpp  Array2.hpp  arithCoder.hpp  config.hpp.in  config.hpp.in.cmake  math.hpp
src/lib/: CMakeLists.txt
src/test/: CMakeLists.txt  array1_test.cpp  array2_test.cpp
